--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.8"
   }
 }
